tests/transpiler/x/swift/partial_application.error
exit status 1
/tmp/TestSwiftTranspiler_VMValid_Golden2846850477/059/main.swift:6:17: error: missing argument for parameter #2 in call
1 | // Generated by Mochi transpiler v0.10.33 on 2025-07-21 18:52:49 GMT+7
2 | import Foundation
3 | func add(_ a: Int, _ b: Int) -> Int {
  |      `- note: 'add' declared here
4 |     return (a + b)
5 | }
6 | let add5 = add(5)
  |                 `- error: missing argument for parameter #2 in call
7 | print((add5(3) as! Int))
8 | 
